Created the classes for semesters, courses, staff, assessments, and course time

--- a/StudentPlanner.csproj
+++ b/StudentPlanner.csproj
@@ -123,6 +123,12 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Assessment.cs" />
+    <Compile Include="Utilities\Course.cs" />
+    <Compile Include="Utilities\CourseTime.cs" />
+    <Compile Include="Utilities\PersonalEvent.cs" />
+    <Compile Include="Utilities\Semester.cs" />
+    <Compile Include="Utilities\Staff.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -154,8 +160,9 @@
       <Version>6.2.10</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Utilities\" />
+    <None Include="README.md" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
